# Kingdom-77

./: .env.api.example  .env.example  .gitignore  .replit  API_README.md  CHANGELOG.md  DAILY_SUMMARY_2025-10-29.md  DEV_BRANCH_README.md  FEATURES.md  INSPECTION_REPORT.md  Main.py  PHASE1_PROGRESS.md  PHASE2.5_REFERENCE.md  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  REPLIT_UPTIME_GUIDE.md  ROLE_MANAGEMENT_SYSTEM.md  TODO.md  TODO_OLD_BACKUP.md  api_server.py  channels.json  fix_type_hints.py  keep_alive.py  main.py  priority_guilds.txt  pyproject.toml  render.yaml  replit.md  requirements-api.txt  requirements.txt  test_db_update.py  test_import.py  test_mongodb.py  test_simple_connection.py
api/: __init__.py  applications_api.py  automessages_api.py  social_api.py
applications/: __init__.py  application_system.py
automessages/: __init__.py  automessage_system.py
automod/: __init__.py  automod_system.py
autoroles/: __init__.py  autorole_system.py
branding/: __init__.py  branding_system.py
cache/: __init__.py  redis.py
cogs/: __init__.py
custom_commands/: command_parser.py  commands_system.py
dashboard/: README.md  __init__.py  config.py  main.py  requirements.txt
dashboard-frontend/: DASHBOARD_README.md  middleware.ts  package-lock.json  package.json
data/: allowed_roles.json.example  channels.json  role_languages.json.example  role_permissions.json.example
database/: __init__.py  application_schema.py  automessages_schema.py  automod_schema.py  autoroles_schema.py  branding_schema.py  credits_schema.py  custom_commands_schema.py  migration.py  (+15 more)
(+210 files in other folders)
