[project]
name = "kingdom-77-bot"
version = "3.6.0"
description = "Kingdom-77 Discord Bot v3.6 - Multi-language translation bot with moderation, leveling, tickets, and auto-roles systems"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.6.4",
    "python-dotenv>=1.1.1",
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "redis>=5.0.0",
]
